--- a/UI/login.html
+++ b/UI/login.html
@@ -35,13 +35,13 @@
             </div>
             <div class="form-row">
                 <label for="password"> Password: </label>
-                <input type="password" name="password" required>
+                <input type="password" name="password" placeholder="Enter password" required>
             </div>
             <div class="form-row">
                 <input type="submit" name="login">
             </div>
             <div class="form-row">
-                <a href="#">forgot password</a>
+                <a href="#">Forgot password</a>
             </div>
             <div class="form-row">
                 Don't have an account ?<a href="register.html"> Sign up</a>
