--- a/UI/register.html
+++ b/UI/register.html
@@ -21,7 +21,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="register.html">Register</a></li>
-                    <li><a href="#">Meetups</a></li>
+                    <li><a href="meetups.html">Meetups</a></li>
                     <li><a href="admin.html">admin</a></li>
                 </ul>
             </nav>
