[Finishes #162978683] add user interface for post question page

--- a/UI/register.html
+++ b/UI/register.html
@@ -46,7 +46,10 @@
                 <input type="password" name="confirm-password" required>
             </div>
             <div class="form-row">
-                <input type="submit" name="login">
+                <input type="submit" name="register">
+            </div>
+            <div class="form-row">
+
             </div>
 
         </form>
