[Finishes #162978990] add delete meetup page

--- a/UI/deletemeetups.html
+++ b/UI/deletemeetups.html
@@ -110,7 +110,7 @@
                     <div>
                         <p class="date"> Thur, 10th Jan 2019, 12:50 PM</p>
                         <p class="desc">
-                            <strong> De-mystifying Microsoft Teams </strong>
+                            <strong> De-mystifying Microsoft Teams.. </strong>
                         </p>
                         <a href="#">view questions</a>
                     </div>
