[Finishes #162978976] add user interface for user profile

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -29,36 +29,60 @@
             <div class="left-aside">
                 <div user-profile>
                     <img src="./images/avatar.jpg" alt="avatar">
-                    <p>Jane Doe</p>
-                    <p>lordkalya@gmail.com</p>
-                </div>
-                <div id="user-feeds">
-                    <p>Questions posted (9)</p>
-                    <p> Questions commented on (9)</p>
                 </div>
             </div>
-            <div class="top-feeds">
-                <h4>Top questions feeds</h4>
+            <div id="user-feeds">
+                <h4>Personal details</h4>
+                <p>Jane Doe</p>
+                <p>lordkalya@gmail.com</p>
                 <hr>
-                <div class="question">
-                    <p>Explain the architecture of Django?
-                    </p>
-                    <button>(5)Like</button> | <button>(2)Dislike</button> | <button>(3)comment</button>
-                </div>
-                <hr>
-                <div class="question">
-                    <p>Why should Django be used for web development?
-                    </p>
-                    <button>(5)Like</button> | <button>(2)Dislike</button> | <button>(3)comment</button>
-                </div>
-                <hr>
-                <div class="question">
-                    <p>What are the inheritance properties in Django?
-                    </p>
-                    <button>(5)Like</button> | <button>(2)Dislike</button> | <button>(3)comment</button>
-                </div>
+                <h4>User Statistics</h4>
+                <p>Questions posted (9)</p>
+                <p> Questions commented on (9)</p>
             </div>
         </section>
+        <div class="top-feeds">
+            <h4>Top questions feeds</h4>
+            <div class="bg-color">
+                <p>
+                    Questions & Answers on Argument Passing, Global vs Local Variables, Shallow copy vs Deep copy
+                    and Recursion
+                </p>
+                <button>(5)Like</button> | <button>(2)Dislike</button>
+                <form action="">
+                    <div class="form-row">
+                        <textarea name="questions" id="" cols="50" rows="2" placeholder="type your comment here ..."></textarea>
+                    </div>
+                    <button type="submit">comment</button>
+                </form>
+            </div>
+            <div class="bg-color">
+                <p>
+                    Questions & Answers on Argument Passing, Global vs Local Variables, Shallow copy vs Deep copy
+                    and Recursion
+                </p>
+                <button>(5)Like</button> | <button>(2)Dislike</button>
+                <form action="">
+                        <div class="form-row">
+                            <textarea name="questions" id="" cols="50" rows="2" placeholder="type your comment here ..."></textarea>
+                        </div>
+                        <button type="submit">comment</button>
+                    </form>
+            </div>
+            <div class="bg-color">
+                <p>
+                    Questions & Answers on Argument Passing, Global vs Local Variables, Shallow copy vs Deep copy
+                    and Recursion
+                </p>
+                <button>(5)Like</button> | <button>(2)Dislike</button> 
+                <form action="">
+                        <div class="form-row">
+                            <textarea name="questions" id="" cols="50" rows="2" placeholder="type your comment here ..."></textarea>
+                        </div>
+                        <button type="submit">comment</button>
+                    </form>
+            </div>
+        </div>
     </div>
     <footer class="footer">
         <p>Copyright &copy; Questioner 2019</p>
