--- a/UI/meetups.html
+++ b/UI/meetups.html
@@ -21,7 +21,7 @@
                     <li><a href="login.html">Login</a></li>
                     <li><a href="register.html">Register</a></li>
                     <li><a href="meetups.html">meetups</a></li>
-                    <li><a href="admin.html">admin</a></li>
+                    <li><a href="dashboard.html">admin</a></li>
                 </ul>
             </nav>
         </div>
