--- a/UI/login.html
+++ b/UI/login.html
@@ -22,7 +22,7 @@
                     <li><a href="login.html">Login</a></li>
                     <li><a href="register.html">Register</a></li>
                     <li><a href="meetups.html">Meetups</a></li>
-                    <li><a href="admin.html">admin</a></li>
+                    <li><a href="dashboard.html">admin</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +41,7 @@
                 <input type="submit" name="login">
             </div>
             <div class="form-row">
-                <a href="#">Forgot password</a>
+                <a href="passwordreset.html">Forgot password</a>
             </div>
             <div class="form-row">
                 Don't have an account ?<a href="register.html"> Sign up</a>
