add changes to login

--- a/UI/login.html
+++ b/UI/login.html
@@ -41,7 +41,7 @@
                 <input type="submit" name="login">
             </div>
             <div class="form-row">
-                <a href="passwordreset.html">Forgot password</a>
+                <a href="passwordreset.html">Forgot Password?</a>
             </div>
             <div class="form-row">
                 Don't have an account ?<a href="register.html"> Sign up</a>
