--- a/UI/register.html
+++ b/UI/register.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <div class="container">
-        <form action="" method="">
+        <form action="" method="" action="login.html">
             <div class="form-row">
                 <label for="email"> Username: </label>
                 <input type="text" name="username" placeholder="Enter your username" required>
