--- a/UI/register.html
+++ b/UI/register.html
@@ -46,7 +46,8 @@
                 <input type="password" name="confirm-password" required>
             </div>
             <div class="form-row">
-                <input type="submit" name="register">
+                <input type="submit" name="register" onclick="login.html>
+                <button type="submit" onclick="login.html">register</button>
             </div>
             <div class="form-row">
 
